[gd_scene load_steps=15 format=3 uid="uid://d0yf3t1yf1ccp"]

[ext_resource type="Script" path="res://UI/Scripts/creation_equipe.gd" id="1_jyadu"]
[ext_resource type="PackedScene" uid="uid://rcby27lpo007" path="res://UI/Displays/Scenes/affichage_equipe.tscn" id="1_krrmm"]
[ext_resource type="PackedScene" uid="uid://drgospxokfdgn" path="res://UI/Buttons/Scenes/recruter.tscn" id="2_idwrw"]
[ext_resource type="Texture2D" uid="uid://b4h88cs2et6xr" path="res://UI/Buttons/creer_base.png" id="4_cr2pn"]
[ext_resource type="PackedScene" uid="uid://bwfn3lux5l4lx" path="res://UI/Buttons/Scenes/fermer.tscn" id="4_fi4k2"]
[ext_resource type="Texture2D" uid="uid://dxkee3lfb7ta6" path="res://UI/Buttons/creer_clicked.png" id="5_bklkr"]
[ext_resource type="PackedScene" uid="uid://dlo7istbb8o4m" path="res://UI/Buttons/Scenes/tester.tscn" id="5_v146c"]
[ext_resource type="PackedScene" uid="uid://drtgbjheuymi7" path="res://UI/Displays/Scenes/affichage_stats_primaires.tscn" id="6_3nuld"]
[ext_resource type="Texture2D" uid="uid://cqi7smwgtmaar" path="res://UI/Buttons/creer_hovered.png" id="6_8gsfa"]
[ext_resource type="PackedScene" uid="uid://5i2iaiitef1b" path="res://UI/Displays/Scenes/affichage_stats_secondaires.tscn" id="7_eyprt"]
[ext_resource type="Texture2D" uid="uid://cj00tojaj188p" path="res://UI/Buttons/supprimer_base.png" id="7_o8iov"]
[ext_resource type="PackedScene" uid="uid://bw1qw1u2hkek8" path="res://UI/Displays/Scenes/affichage_budget.tscn" id="8_5fbff"]
[ext_resource type="Texture2D" uid="uid://bntvfyl8ucfvp" path="res://UI/Buttons/supprimer_clicked.png" id="8_lhwf5"]
[ext_resource type="Texture2D" uid="uid://5xqkcvgvqcp3" path="res://UI/Buttons/supprimer_hovered.png" id="9_q44j5"]

[node name="CreationEquipe" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jyadu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -80.0
offset_top = -73.0
offset_right = 1683.0
offset_bottom = 965.0
color = Color(0.529412, 0.478431, 0.317647, 1)

[node name="AffichageEquipe" parent="." instance=ExtResource("1_krrmm")]
layout_mode = 1
offset_top = 41.0
offset_bottom = 41.0

[node name="GridRecruter" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 36.0
offset_top = 386.0
offset_right = 1061.0
offset_bottom = 454.0
scale = Vector2(1.5, 1.5)
theme_override_constants/h_separation = 48
columns = 6

[node name="Creer" parent="GridRecruter" instance=ExtResource("2_idwrw")]
layout_mode = 2
offset_right = 130.0
offset_bottom = 32.0
texture_normal = ExtResource("4_cr2pn")
texture_pressed = ExtResource("5_bklkr")
texture_hover = ExtResource("6_8gsfa")

[node name="Creer2" parent="GridRecruter" instance=ExtResource("2_idwrw")]
layout_mode = 2
offset_left = 178.0
offset_right = 308.0
offset_bottom = 32.0
texture_normal = ExtResource("4_cr2pn")
texture_pressed = ExtResource("5_bklkr")
texture_hover = ExtResource("6_8gsfa")

[node name="Creer3" parent="GridRecruter" instance=ExtResource("2_idwrw")]
layout_mode = 2
offset_left = 356.0
offset_right = 486.0
offset_bottom = 32.0
texture_normal = ExtResource("4_cr2pn")
texture_pressed = ExtResource("5_bklkr")
texture_hover = ExtResource("6_8gsfa")

[node name="Creer4" parent="GridRecruter" instance=ExtResource("2_idwrw")]
layout_mode = 2
offset_left = 534.0
offset_right = 664.0
offset_bottom = 32.0
texture_normal = ExtResource("4_cr2pn")
texture_pressed = ExtResource("5_bklkr")
texture_hover = ExtResource("6_8gsfa")

[node name="Creer5" parent="GridRecruter" instance=ExtResource("2_idwrw")]
layout_mode = 2
offset_left = 712.0
offset_right = 842.0
offset_bottom = 32.0
texture_normal = ExtResource("4_cr2pn")
texture_pressed = ExtResource("5_bklkr")
texture_hover = ExtResource("6_8gsfa")

[node name="Creer6" parent="GridRecruter" instance=ExtResource("2_idwrw")]
layout_mode = 2
offset_left = 890.0
offset_right = 1020.0
offset_bottom = 32.0
texture_normal = ExtResource("4_cr2pn")
texture_pressed = ExtResource("5_bklkr")
texture_hover = ExtResource("6_8gsfa")

[node name="Supprimer" type="TextureButton" parent="GridRecruter"]
layout_mode = 2
offset_top = 36.0
offset_right = 130.0
offset_bottom = 68.0
texture_normal = ExtResource("7_o8iov")
texture_pressed = ExtResource("8_lhwf5")
texture_hover = ExtResource("9_q44j5")

[node name="Supprimer2" type="TextureButton" parent="GridRecruter"]
layout_mode = 2
offset_left = 178.0
offset_top = 36.0
offset_right = 308.0
offset_bottom = 68.0
texture_normal = ExtResource("7_o8iov")
texture_pressed = ExtResource("8_lhwf5")
texture_hover = ExtResource("9_q44j5")

[node name="Supprimer3" type="TextureButton" parent="GridRecruter"]
layout_mode = 2
offset_left = 356.0
offset_top = 36.0
offset_right = 486.0
offset_bottom = 68.0
texture_normal = ExtResource("7_o8iov")
texture_pressed = ExtResource("8_lhwf5")
texture_hover = ExtResource("9_q44j5")

[node name="Supprimer4" type="TextureButton" parent="GridRecruter"]
layout_mode = 2
offset_left = 534.0
offset_top = 36.0
offset_right = 664.0
offset_bottom = 68.0
texture_normal = ExtResource("7_o8iov")
texture_pressed = ExtResource("8_lhwf5")
texture_hover = ExtResource("9_q44j5")

[node name="Supprimer5" type="TextureButton" parent="GridRecruter"]
layout_mode = 2
offset_left = 712.0
offset_top = 36.0
offset_right = 842.0
offset_bottom = 68.0
texture_normal = ExtResource("7_o8iov")
texture_pressed = ExtResource("8_lhwf5")
texture_hover = ExtResource("9_q44j5")

[node name="Supprimer6" type="TextureButton" parent="GridRecruter"]
layout_mode = 2
offset_left = 890.0
offset_top = 36.0
offset_right = 1020.0
offset_bottom = 68.0
texture_normal = ExtResource("7_o8iov")
texture_pressed = ExtResource("8_lhwf5")
texture_hover = ExtResource("9_q44j5")

[node name="GridContainer2" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 597.0
offset_top = 845.0
offset_right = 896.0
offset_bottom = 885.0
scale = Vector2(1.5, 1.5)
columns = 2

[node name="Fermer" parent="GridContainer2" instance=ExtResource("4_fi4k2")]
layout_mode = 2

[node name="Tester" parent="GridContainer2" instance=ExtResource("5_v146c")]
layout_mode = 2
offset_left = 134.0
offset_right = 299.0
offset_bottom = 32.0

[node name="GridStatsPrimaires" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 258.0
offset_right = 1593.0
offset_bottom = 369.008
theme_override_constants/h_separation = 17
columns = 6

[node name="AffichageStatsPrimaires" parent="GridStatsPrimaires" instance=ExtResource("6_3nuld")]
layout_mode = 2
offset_right = 250.0
offset_bottom = 111.0

[node name="AffichageStatsPrimaires2" parent="GridStatsPrimaires" instance=ExtResource("6_3nuld")]
layout_mode = 2
offset_left = 267.0
offset_right = 517.0
offset_bottom = 111.0

[node name="AffichageStatsPrimaires3" parent="GridStatsPrimaires" instance=ExtResource("6_3nuld")]
layout_mode = 2
offset_left = 534.0
offset_right = 784.0
offset_bottom = 111.0

[node name="AffichageStatsPrimaires4" parent="GridStatsPrimaires" instance=ExtResource("6_3nuld")]
layout_mode = 2
offset_left = 801.0
offset_right = 1051.0
offset_bottom = 111.0

[node name="AffichageStatsPrimaires5" parent="GridStatsPrimaires" instance=ExtResource("6_3nuld")]
layout_mode = 2
offset_left = 1068.0
offset_right = 1318.0
offset_bottom = 111.0

[node name="AffichageStatsPrimaires6" parent="GridStatsPrimaires" instance=ExtResource("6_3nuld")]
layout_mode = 2
offset_left = 1335.0
offset_right = 1585.0
offset_bottom = 111.0

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 500.0
offset_right = 2063.0
offset_bottom = 953.0
scale = Vector2(0.75, 0.75)
theme_override_constants/h_separation = 107
columns = 6

[node name="AffichageStatsPrimaires" parent="GridContainer" instance=ExtResource("7_eyprt")]
layout_mode = 2
offset_right = 248.0
offset_bottom = 453.0

[node name="AffichageStatsPrimaires2" parent="GridContainer" instance=ExtResource("7_eyprt")]
layout_mode = 2
offset_left = 355.0
offset_right = 603.0
offset_bottom = 453.0

[node name="AffichageStatsPrimaires3" parent="GridContainer" instance=ExtResource("7_eyprt")]
layout_mode = 2
offset_left = 710.0
offset_right = 958.0
offset_bottom = 453.0

[node name="AffichageStatsPrimaires4" parent="GridContainer" instance=ExtResource("7_eyprt")]
layout_mode = 2
offset_left = 1065.0
offset_right = 1313.0
offset_bottom = 453.0

[node name="AffichageStatsPrimaires5" parent="GridContainer" instance=ExtResource("7_eyprt")]
layout_mode = 2
offset_left = 1420.0
offset_right = 1668.0
offset_bottom = 453.0

[node name="AffichageStatsPrimaires6" parent="GridContainer" instance=ExtResource("7_eyprt")]
layout_mode = 2
offset_left = 1775.0
offset_right = 2023.0
offset_bottom = 453.0

[node name="AffichageBudget" parent="." instance=ExtResource("8_5fbff")]
layout_mode = 0
offset_left = 702.0
offset_right = 899.0

[connection signal="pressed" from="GridRecruter/Creer" to="." method="_on_recruter_pressed"]
[connection signal="pressed" from="GridRecruter/Creer2" to="." method="_on_recruter_2_pressed"]
[connection signal="pressed" from="GridRecruter/Creer3" to="." method="_on_recruter_3_pressed"]
[connection signal="pressed" from="GridRecruter/Creer4" to="." method="_on_recruter_4_pressed"]
[connection signal="pressed" from="GridRecruter/Creer5" to="." method="_on_recruter_5_pressed"]
[connection signal="pressed" from="GridRecruter/Creer6" to="." method="_on_recruter_6_pressed"]
[connection signal="pressed" from="GridContainer2/Fermer" to="." method="_on_fermer_pressed"]
