extends Control


func _on_fermer_pressed():
	get_tree().change_scene_to_file("res://UI/gestion_equipes.tscn")


func _on_recruter_pressed():
	get_tree().change_scene_to_file("res://UI/choix_classe.tscn")


func _on_recruter_2_pressed():
	get_tree().change_scene_to_file("res://UI/choix_classe.tscn")


func _on_recruter_3_pressed():
	get_tree().change_scene_to_file("res://UI/choix_classe.tscn")


func _on_recruter_4_pressed():
	get_tree().change_scene_to_file("res://UI/choix_classe.tscn")


func _on_recruter_5_pressed():
	get_tree().change_scene_to_file("res://UI/choix_classe.tscn")


func _on_recruter_6_pressed():
	get_tree().change_scene_to_file("res://UI/choix_classe.tscn")
